<resources>
    <string name="app_name">P.Love</string>
    <string name="action_settings">Служба поддержки</string>
    <string name="action_trash">Очистить корзину</string>
    <string name="please_auth">Пожалуйста авторизируйтесь</string>
    <string name="login_placeholder">Номер телефона</string>
    <string name="password_placeholder">Пароль</string>
    <string name="auth_btn">Войти</string>
    <string name="reg_btn">Регистрация</string>
    <string name="guest_btn">Гость</string>
    <string name="title_activity_main">Чайхона P.Love</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="action_messenger">Обратная связь</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="your_balls_count">Количество Ваших баллов</string>
    <string name="menu_btn_menu">Меню</string>
    <string name="menu_btn_delivery">Доставки</string>
    <string name="menu_btn_and"><![CDATA[&]]></string>
    <string name="menu_btn_with_self">С собой</string>
    <string name="menu_btn_bron">Забронировать</string>
    <string name="menu_btn_desc">Стол</string>
    <string name="btn_scan_check">Сканировать чек</string>
    <string name="title_activity_menu">ВСЕ</string>
    <string name="btnLostPassword">Забыли пароль?</string>
    <string name="register_label">Регистрация</string>
    <string name="btn_next">Далее</string>
    <string name="btn_done">Готово</string>
    <string name="btn_cancel">Отмена</string>
    <string name="code_placeholder">Код</string>
    <string name="btn_resent">Выслать повторно</string>
    <string name="check_code">На указанный вами номер \nвыслан проверочный код</string>
    <string name="label_one_moment">Осталось совсем немного</string>
    <string name="username">Имя</string>
    <string name="user_lastname">Фамилия</string>
    <string name="user_birthday">Дата рождения</string>
    <string name="set_your_sex">Укажите ваш пол</string>
    <string name="sex_man">Мужской</string>
    <string name="sex_woman">Женский</string>
    <string name="lost_password_title">Восстановление пароля</string>
    <string name="title_activity_open_sale">Предложение</string>
    <string name="title_activity_open_cafe">Ресторан</string>
    <string name="brone_button">Забронировать</string>
    <string name="connection_error">Ой! Похоже нет интернет соединения..</string>
    <string name="data_error">Ошибка обработки запроса. Попробуйте еще раз.</string>
    <string name="error_empty_login">Не указан номер телефона</string>
    <string name="error_empty_lastname">Введите Ваше имя</string>
    <string name="error_empty_firstname">Введите Вашу фамилию</string>
    <string name="error_empty_bday">Укажите день рождения</string>
    <string name="error_empty_code">Введите код подтверждения из СМС</string>
    <string name="error_empty_password">Не указан пароль</string>
    <string name="title_activity_menu_search">Поиск</string>
    <string name="title_activity_menu_item">MenuItemActivity</string>
    <string name="title_activity_bag">BagActivity</string>
    <string name="title_activity_reservation_select_cafe">Выберите ресторан</string>
    <string name="title_activity_reservation_profile">Бронирование</string>
    <string name="label_select_time">Выберите время</string>
    <string name="label_click_to_select">Нажми, чтобы выбрать</string>
    <string name="label_persons_count">Количество персон</string>
    <string name="title_activity_reservation_done">Результат бронирования</string>
    <string name="label_phone">Телефон</string>
    <string name="reserv_done_ok">Поздравляем! Вы забронировали стол по адресу:</string>
    <string name="label_time">Время</string>
    <string name="reserv_delete">Отменить бронь</string>
    <string name="pre_order">Сделать предзаказ</string>
    <string name="empty_bag">Корзина пуста.</string>
    <string name="title_activity_order_step1">Оформление заказа</string>
    <string name="title_activity_order_step2">Контакты</string>
    <string name="title_activity_order_step3">Банковская карта</string>
    <string name="title_activity_order_step4">Оплата</string>
    <string name="pay_by_points">До 50% стоимости заказа Вы можете оплатить баллами.</string>
    <string name="title_activity_web_view">Оплата</string>
    <string name="order_done_ok">Поздравляем!\nВы успешно оформили заказ. \nНаш менеджер свяжется с Вами в ближайшее время для подтверждения заказа.</string>
    <string name="label_time_delivery">Время ожидания</string>
    <string name="title_activity_order_done">Завершено</string>
    <string name="send_to">Поделиться</string>
    <string name="title_activity_options">Настройки</string>
    <string name="title_activity_profile">Профиль</string>
    <string name="btn_save_title">Сохранить</string>
    <string name="title_activity_category">Категории</string>
    <string name="title_activity_web">WebActivity</string>
    <string name="title_activity_order_qr">Оплата заказа</string>
    <string name="title_activity_select_time">Выбор времени</string>
    <string name="title_home">Главная</string>
    <string name="title_record">История</string>
    <string name="title_history">Рестораны</string>
    <string name="title_map">Настройки</string>
    <string name="error_empty_card">Введине номер карты</string>
</resources>
