<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_reservation_done"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.octarine.plove.reservation.ReservationDoneActivity"
    tools:showIn="@layout/activity_reservation_done">

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RelativeLayout
                android:id="@+id/rl1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="16dp"
                android:paddingLeft="16dp"
                android:paddingRight="24dp"
                android:paddingTop="22dp">

                <TextView
                    android:id="@+id/textViewReservationResult"
                    style="@style/FormTitles"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="50dp"
                    android:layout_toLeftOf="@+id/imageView7"
                    android:text="@string/reserv_done_ok" />

                <ImageView
                    android:id="@+id/imageView7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    app:srcCompat="@drawable/reserve2" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/rl3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/rl1"
                android:paddingBottom="25dp"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:paddingTop="25dp">

                <TextView
                    android:id="@+id/textViewAddrees"
                    style="@style/ReservAddress"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="ТК ОЛИМП, 3 ЭТАЖ, УЛ. ЗОРГЕ 66. КАЗАНЬ" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/rl4"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_below="@+id/rl3"
                android:background="#c0c0c0">

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/rl5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/rl4"
                android:paddingBottom="16dp"
                android:paddingLeft="16dp"
                android:paddingRight="24dp"
                android:paddingTop="16dp">

                <TextView
                    android:id="@+id/textView18"
                    style="@style/FormTitles"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_time" />

                <TextView
                    android:id="@+id/textViewDate"
                    style="@style/FormTitles"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:text="03.12.2016 12:00" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/rl6"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_below="@+id/rl5"
                android:background="#c0c0c0">

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/rl7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/rl6"
                android:paddingBottom="16dp"
                android:paddingLeft="16dp"
                android:paddingRight="24dp"
                android:paddingTop="16dp">

                <TextView
                    android:id="@+id/textView20"
                    style="@style/FormTitles"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_persons_count" />

                <TextView
                    android:id="@+id/textViewPersons"
                    style="@style/FormTitles"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:text="2" />
            </RelativeLayout>

            <Button
                android:id="@+id/buttonOrder"
                style="@style/RedButtonText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/rl7"
                android:layout_marginLeft="32dp"
                android:layout_marginRight="32dp"
                android:layout_marginTop="20dp"
                android:background="@color/pinkish_orange"
                android:gravity="center_vertical|center_horizontal"
                android:text="@string/pre_order" />

            <Button
                android:id="@+id/buttonDeleteReserv"
                style="@style/RedButtonText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/buttonOrder"
                android:layout_marginBottom="20dp"
                android:layout_marginLeft="32dp"
                android:layout_marginRight="32dp"
                android:layout_marginTop="20dp"
                android:background="@color/plove_red"
                android:gravity="center_vertical|center_horizontal"
                android:text="@string/reserv_delete" />

        </RelativeLayout>
    </ScrollView>

</RelativeLayout>
